--- a/process.env
+++ b/process.env
@@ -1,5 +1,6 @@
-DB_HOST=localhost
+DB_HOST="mongodb+srv://varun51:gotilla@123@cluster0-ovdbs.mongodb.net"
 DB_USER=root
 DB_PASS=s1mpl3
 CLOUDINARY_API_KEY=818758744624256
 CLOUDINARY_API_SECRET="ionm18OMZfQFvMamGrDsKIWZbJ4"
+
