--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "entertainment",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "engines": {
-    "node": "8.10.0"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cloudinary": "^1.21.0",
-    "connect-flash": "^0.1.1",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.2",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "method-override": "^3.0.0",
-    "mongoose": "^5.9.11",
-    "multer": "^1.4.2",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
-  }
+    "name": "entertainment",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "start": "node app.js",
+        "dev": "nodemon app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "engines": {
+        "node": "8.10.0"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cloudinary": "^1.21.0",
+        "connect-flash": "^0.1.1",
+        "dotenv": "^8.2.0",
+        "ejs": "^3.1.2",
+        "express": "^4.17.1",
+        "express-session": "^1.17.1",
+        "method-override": "^3.0.0",
+        "mongoose": "^5.9.11",
+        "multer": "^1.4.2",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^6.0.1",
+        "validator": "^13.1.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.4"
+    }
 }
